Prevent icon layout shift

--- a/client/src/app/+about/about-instance/instance-statistics.component.scss
+++ b/client/src/app/+about/about-instance/instance-statistics.component.scss
@@ -32,6 +32,7 @@ my-global-icon {
   left: 16px;
   top: -24px;
   width: 110px;
+  height: 110px;
 
   &.icon-bottom {
     top: 4px;
