--- a/client/src/app/shared/shared-abuse-list/abuse-list-table.component.scss
+++ b/client/src/app/shared/shared-abuse-list/abuse-list-table.component.scss
@@ -10,17 +10,18 @@
 
 .abuse-messages {
   my-global-icon {
-    width: 22px;
     position: relative;
-    top: -2px;
+    top: -1px;
 
+    @include global-icon-size(22px);
     @include margin-left(3px);
   }
 }
 
 .table-video-text my-global-icon,
 my-video-cell my-global-icon {
-  width: 15px;
   position: relative;
   top: -2px;
+
+  @include global-icon-size(15px);
 }
