--- a/client/src/app/shared/shared-video-playlist/video-playlist-element-miniature.component.scss
+++ b/client/src/app/shared/shared-video-playlist/video-playlist-element-miniature.component.scss
@@ -29,6 +29,7 @@ my-video-thumbnail,
 .video {
   display: grid;
   grid-template-columns: 1fr auto;
+  align-items: center;
   background-color: pvar(--bg);
   padding: 10px;
   border-bottom: 1px solid $separator-border-color;
@@ -44,7 +45,6 @@ my-video-thumbnail,
   }
 
   > a {
-    grid-row: 1 / 3;
     display: flex;
     min-width: 0;
     align-items: center;
@@ -56,26 +56,20 @@ my-video-thumbnail,
       min-width: 25px;
 
       my-global-icon {
-        width: 17px;
         position: relative;
         left: -2px;
         color: pvar(--fg-300);
+
+        @include global-icon-size(17px);
       }
     }
   }
 
-  .more,
-  my-edit-button {
-    justify-self: flex-end;
+  .more {
     cursor: pointer;
     min-width: 24px;
 
     @include margin-left(auto);
-  }
-
-  .more {
-    display: flex;
-    align-items: center;
   }
 
   .more-button {
