--- a/client/src/sass/include/_button-mixins.scss
+++ b/client/src/sass/include/_button-mixins.scss
@@ -120,10 +120,6 @@
 @mixin rounded-icon-button {
   padding: 0.5rem !important;
   border-radius: 100% !important;
-
-  my-global-icon {
-    width: 24px;
-  }
 }
 
 @mixin danger-button {
